--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -8,7 +8,8 @@
 @screen-lg-min: 1200px;
 /* ===== // SIZES =====*/
 body {
-  background: #383838;
+  min-height: 100vh;
+  background: linear-gradient(to top, #283048, #859398);
   color: #fff;
 
   .wrapper {
