--- a/assets/css/includes/header-footer.less
+++ b/assets/css/includes/header-footer.less
@@ -5,10 +5,11 @@ header {
   position: fixed;
   height: 100vh;
   width: 30%;
-  background: #111;
+  // background: url("/assets/img/forest.jpg");
+  background: transparent;
 
   .who {
-    margin: 150px 50px 0 0;
+    margin: 120px 50px 0 0;
 
     img {
       max-width: 150px;
@@ -31,7 +32,7 @@ header {
 
     .who {
       margin: 0;
-      padding: 50px 0 0;
+      padding: 50px 0;
       text-align: center;
     }
   }
@@ -66,6 +67,6 @@ footer {
     position: static;
     height: 200px;
     width: auto;
-    background: @red;
+    background: transparent;
   }
 }
