--- a/assets/css/includes/header-footer.less
+++ b/assets/css/includes/header-footer.less
@@ -5,8 +5,7 @@ header {
   position: fixed;
   height: 100vh;
   width: 30%;
-  // background: url("/assets/img/forest.jpg");
-  background: transparent;
+  background: rgba(0,0,0,0.5);
 
   .who {
     margin: 120px 50px 0 0;
