--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ header {
   position: fixed;
   height: 100vh;
   width: 30%;
-  background: transparent;
+  background: rgba(0, 0, 0, 0.5);
 }
 header .who {
   margin: 120px 50px 0 0;
