--- a/assets/css/includes/all.less
+++ b/assets/css/includes/all.less
@@ -1,6 +1,39 @@
 // "main": "../style.less"
 
-img {
-  max-width: 100%;
-  height: auto;
+body {
+  min-height: 100vh;
+  background: linear-gradient(to top, #283048, #859398);
+  font-size: 15px;
+  line-height: 1.5;
+  color: #fff;
+
+  .wrapper {
+    position: relative;
+
+    h2 {
+      margin-bottom: 35px;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    a {
+      color: #7fff00;
+
+      &:focus,
+      &:hover {
+        color: #7fff00;
+      }
+
+      &:focus {
+        text-decoration: none;
+      }
+
+      &:active {
+        text-decoration: underline;
+      }
+    }
+  }
 }
