--- a/assets/css/includes/header-footer.less
+++ b/assets/css/includes/header-footer.less
@@ -1,12 +1,11 @@
 // "main": "../style.less"
-@red: linear-gradient(to bottom, #23165f 50%, #ff2700);
+// @red: linear-gradient(to bottom, #23165f 50%, #ff2700);
 
 header {
   position: fixed;
   height: 100vh;
   width: 30%;
-  background: rgba(0,0,0,0.5);
-
+  // background: rgba(0,0,0,0.5);
   .who {
     margin: 120px 50px 0 0;
 
@@ -14,6 +13,14 @@ header {
       max-width: 150px;
       height: 150px;
       margin-bottom: 30px;
+    }
+
+    h1 {
+      font-size: 24px;
+
+      span {
+        font-size: 20px;
+      }
     }
 
     p {
@@ -67,5 +74,21 @@ footer {
     height: 200px;
     width: auto;
     background: transparent;
+
+    .contact {
+      .social {
+        ul {
+          text-align: center;
+
+          li {
+            float: none;
+
+            &:first-child {
+              margin-right: 0;
+            }
+          }
+        }
+      }
+    }
   }
 }
