--- a/assets/css/includes/main.less
+++ b/assets/css/includes/main.less
@@ -2,4 +2,30 @@
 
 main {
   padding: 50px 20px;
+
+  section {
+    &.about {
+      ul {
+        padding: 20px;
+
+        li {
+          margin-bottom: 3px;
+        }
+      }
+    }
+
+    &.portfolio {
+      .item {
+        margin-bottom: 40px;
+
+        img {
+          margin-bottom: 15px;
+        }
+
+        p {
+          font-size: 12px;
+        }
+      }
+    }
+  }
 }
