Parallax is commented

--- a/assets/css/includes/header-footer.less
+++ b/assets/css/includes/header-footer.less
@@ -5,7 +5,11 @@ header {
   position: fixed;
   height: 100vh;
   width: 30%;
-  // background: rgba(0,0,0,0.5);
+  // background-color: rgba(0,0,0,0.5);
+  background: url("/assets/img/forest1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+
   .who {
     margin: 120px 50px 0 0;
 
