--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,9 @@ header {
   position: fixed;
   height: 100vh;
   width: 30%;
+  background: url("/assets/img/forest1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 header .who {
   margin: 120px 50px 0 0;
