--- a/assets/css/includes/all.less
+++ b/assets/css/includes/all.less
@@ -2,7 +2,9 @@
 
 body {
   min-height: 100vh;
-  background: linear-gradient(to top, #283048, #859398);
+  // background: linear-gradient(to right, #030401, rgba(50, 75, 0, 1));
+  // background: linear-gradient(to right, #00f 90%, #f00);
+  background: #000;
   font-size: 15px;
   line-height: 1.5;
   color: #fff;
@@ -20,11 +22,11 @@ body {
     }
 
     a {
-      color: #7fff00;
+      color: #0f0;
 
       &:focus,
       &:hover {
-        color: #7fff00;
+        color: #0f0;
       }
 
       &:focus {
