--- a/assets/css/includes/header-footer.less
+++ b/assets/css/includes/header-footer.less
@@ -5,10 +5,10 @@ header {
   position: fixed;
   height: 100vh;
   width: 30%;
-  // background-color: rgba(0,0,0,0.5);
-  background: url("/assets/img/forest1.jpg");
+  background: url("/assets/img/forest2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: left;
 
   .who {
     margin: 120px 50px 0 0;
@@ -28,7 +28,8 @@ header {
     }
 
     p {
-      font-size: 19px;
+      margin-top: 30px;
+      font-size: 15px;
 
       span {
         font-size: 25px;
