--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,9 +46,10 @@ header {
   position: fixed;
   height: 100vh;
   width: 30%;
-  background: url("/assets/img/forest1.jpg");
+  background: url("/assets/img/forest2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: left;
 }
 header .who {
   margin: 120px 50px 0 0;
@@ -65,7 +66,8 @@ header .who h1 span {
   font-size: 20px;
 }
 header .who p {
-  font-size: 19px;
+  margin-top: 30px;
+  font-size: 15px;
 }
 header .who p span {
   font-size: 25px;
@@ -118,7 +120,7 @@ footer .contact .social ul li a {
 }
 body {
   min-height: 100vh;
-  background: linear-gradient(to top, #283048, #859398);
+  background: #000;
   font-size: 15px;
   line-height: 1.5;
   color: #fff;
@@ -134,11 +136,11 @@ body .wrapper img {
   height: auto;
 }
 body .wrapper a {
-  color: #7fff00;
+  color: #0f0;
 }
 body .wrapper a:focus,
 body .wrapper a:hover {
-  color: #7fff00;
+  color: #0f0;
 }
 body .wrapper a:focus {
   text-decoration: none;
