--- a/assets/css/includes/main.less
+++ b/assets/css/includes/main.less
@@ -2,14 +2,16 @@
 
 main {
   padding: 50px 20px;
+  letter-spacing: 1px;
+  font-family: western;
 
   section {
     &.about {
       ul {
-        padding: 20px;
+        margin-bottom: 50px;
 
         li {
-          margin-bottom: 3px;
+          margin-bottom: 5px;
         }
       }
     }
