--- a/assets/css/includes/header-footer.less
+++ b/assets/css/includes/header-footer.less
@@ -1,14 +1,11 @@
 // "main": "../style.less"
-// @red: linear-gradient(to bottom, #23165f 50%, #ff2700);
 
 header {
   position: fixed;
   height: 100vh;
   width: 30%;
-  background: url("/assets/img/forest2.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: left;
+  border-right: 2px solid #020302;
+  font-family: western;
 
   .who {
     margin: 120px 50px 0 0;
@@ -16,30 +13,39 @@ header {
     img {
       max-width: 150px;
       height: 150px;
-      margin-bottom: 30px;
+      margin: 10px 0;
     }
 
     h1 {
-      font-size: 24px;
+      margin: 0;
+      font-size: 35px;
+      font-weight: 100;
+    }
 
-      span {
-        font-size: 20px;
+    h2 {
+      margin: 0;
+
+      &.reward {
+        margin-top: 10px;
+
+        .blur {
+          filter: blur(3px);
+        }
       }
     }
 
     p {
-      margin-top: 30px;
-      font-size: 15px;
-
-      span {
-        font-size: 25px;
-      }
+      margin: 0;
+      line-height: 0.9;
+      font-size: 27px;
     }
   }
   @media (max-width: @screen-sm-max) {
     position: static;
     height: auto;
     width: auto;
+    border-right: 0;
+    border-bottom: 2px solid #020302;
 
     .who {
       margin: 0;
