Changed text in main

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -7,52 +7,68 @@
 @screen-md-max: 1199px;
 @screen-lg-min: 1200px;
 /* ===== // WINDOW SIZES =====*/
+/* ===== SPACERS =====*/
+// .spacer {
+//   display: block;
+//   height: 100px;
+//   width: 100%;
+// }
+// .spacer25:extend(.spacer){
+//   height: 25px;
+// }
+// .spacer50:extend(.spacer){
+//   height: 50px;
+// }
+// .spacer100:extend(.spacer){
+//   height: 100px;
+// }
+/* ===== // SPACERS =====*/
 /* ===== FONT SIZES =====*/
 @media (max-width: @screen-md-min) {
   h1 {
-    font-size: 23px !important;
+    font-size: 36px !important;
   }
 
   h2 {
-    font-size: 21px !important;
+    font-size: 33px !important;
   }
 
   h3 {
-    font-size: 18px !important;
+    font-size: 30px !important;
   }
 }
 @media (max-width: @screen-sm-min) {
   h1 {
-    font-size: 21px !important;
+    font-size: 33px !important;
   }
 
   h2 {
-    font-size: 19px !important;
+    font-size: 31px !important;
   }
 
   h3 {
-    font-size: 16px !important;
+    font-size: 27px !important;
   }
 
   p {
-    font-size: 13px !important;
+    // font-size: px !important;
   }
 }
 @media (max-width: @screen-xs-max) {
   h1 {
-    font-size: 19px !important;
+    font-size: 30px !important;
   }
 
   h2 {
-    font-size: 16px !important;
+    font-size: 29px !important;
   }
 
   h3 {
-    font-size: 15px !important;
+    font-size: 24px !important;
   }
 
   p {
-    font-size: 14px !important;
+    // font-size: 14px !important;
   }
 }
 /* ===== // FONT SIZES =====*/
