--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,43 +1,39 @@
 /* ===== WINDOW SIZES ===== */
 /* ===== // WINDOW SIZES =====*/
+/* ===== SPACERS =====*/
+/* ===== // SPACERS =====*/
 /* ===== FONT SIZES =====*/
 @media (max-width: 992px) {
   h1 {
-    font-size: 23px !important;
+    font-size: 36px !important;
   }
   h2 {
-    font-size: 21px !important;
+    font-size: 33px !important;
   }
   h3 {
-    font-size: 18px !important;
+    font-size: 30px !important;
   }
 }
 @media (max-width: 768px) {
   h1 {
-    font-size: 21px !important;
+    font-size: 33px !important;
   }
   h2 {
-    font-size: 19px !important;
+    font-size: 31px !important;
   }
   h3 {
-    font-size: 16px !important;
-  }
-  p {
-    font-size: 13px !important;
+    font-size: 27px !important;
   }
 }
 @media (max-width: 767px) {
   h1 {
-    font-size: 19px !important;
+    font-size: 30px !important;
   }
   h2 {
-    font-size: 16px !important;
+    font-size: 29px !important;
   }
   h3 {
-    font-size: 15px !important;
-  }
-  p {
-    font-size: 14px !important;
+    font-size: 24px !important;
   }
 }
 /* ===== // FONT SIZES =====*/
@@ -145,7 +141,7 @@ body .wrapper {
   position: relative;
 }
 body .wrapper main h2 {
-  margin-bottom: 25px;
+  margin-bottom: 15px;
 }
 body .wrapper img {
   max-width: 100%;
@@ -161,7 +157,7 @@ main {
   letter-spacing: 1px;
   font-family: western;
 }
-main section.about ul {
+main section {
   margin-bottom: 50px;
 }
 main section.about ul li {
