--- a/assets/css/includes/header-footer.less
+++ b/assets/css/includes/header-footer.less
@@ -4,7 +4,6 @@ header {
   position: fixed;
   height: 100vh;
   width: 30%;
-  border-right: 2px solid #020302;
   font-family: western;
 
   .who {
@@ -57,7 +56,7 @@ header {
 
 footer {
   position: fixed;
-  bottom: 30px;
+  bottom: 70px;
   left: 0;
   width: 30%;
   font-family: western;
@@ -77,7 +76,7 @@ footer {
       .ya-share2 {
         ul {
           li {
-            margin: 0 15px;
+            margin: 0 15px 25px;
           }
         }
       }
