Added margin-bottonm for footer in xs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,7 @@ footer .share .ya-share2 {
     position: static;
     height: 100px;
     width: auto;
+    margin-bottom: 60px;
   }
   footer .share .ya-share2 ul li {
     margin: 0 15px 25px;
