--- a/assets/css/includes/header-footer.less
+++ b/assets/css/includes/header-footer.less
@@ -71,6 +71,7 @@ footer {
     position: static;
     height: 100px;
     width: auto;
+    margin-bottom: 60px;
 
     .share {
       .ya-share2 {
