Fixed some bugs

--- a/assets/css/includes/all.less
+++ b/assets/css/includes/all.less
@@ -56,4 +56,9 @@ body {
   &::-webkit-scrollbar-thumb {
     display: none;
   }
+  @media (max-width: @screen-xs-max) {
+    .wrapper {
+      top: 30px;
+    }
+  }
 }
