--- a/assets/css/includes/header-footer.less
+++ b/assets/css/includes/header-footer.less
@@ -7,7 +7,7 @@ header {
   font-family: western;
 
   .who {
-    margin: 120px 50px 0 0;
+    margin-top: 80px;
 
     img {
       max-width: 150px;
