--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,5 @@
 /* ===== WINDOW SIZES ===== */
 /* ===== // WINDOW SIZES =====*/
-/* ===== SPACERS =====*/
-/* ===== // SPACERS =====*/
 /* ===== FONT SIZES =====*/
 @media (max-width: 992px) {
   h1 {
@@ -42,7 +40,8 @@ header {
   position: fixed;
   height: 100vh;
   width: 30%;
-  font-family: western;
+  border-right: 7px solid #fff;
+  font-family: northface;
 }
 header .who {
   margin-top: 80px;
@@ -64,7 +63,7 @@ header .who h2.reward {
   margin-top: 10px;
 }
 header .who h2.reward .blur {
-  filter: blur(3px);
+  filter: blur(5px);
 }
 header .who p {
   margin: 0;
@@ -77,7 +76,7 @@ header .who p {
     height: auto;
     width: auto;
     border-right: 0;
-    border-bottom: 2px solid #020302;
+    border-bottom: 5px solid #fff;
   }
   header .who {
     margin: 0;
@@ -88,13 +87,12 @@ header .who p {
 footer {
   position: fixed;
   bottom: 70px;
-  left: 0;
+  left: 15px;
   width: 30%;
-  font-family: western;
+  font-family: northface;
 }
 footer .share .ya-share2 {
   display: inline-block !important;
-  filter: grayscale(1) !important;
 }
 @media (max-width: 991px) {
   footer {
@@ -111,26 +109,20 @@ footer .share .ya-share2 {
   src: url("/assets/fonts/WesternBangBang.otf");
   font-family: western;
 }
+@font-face {
+  src: url("/assets/fonts/NorthFace.ttf");
+  font-family: northface;
+}
 body {
   min-height: 100vh;
-  background: url("/assets/img/board.jpg");
-  background-repeat: repeat-y;
-  background-size: 100% auto;
+  background: #000030;
   font-size: 22px;
   line-height: 1.5;
-  color: #020302;
-}
-body .wrapper {
-  position: relative;
-  top: 100px;
-  transform-origin: top;
-  background: url("/assets/img/paper.jpg");
-  background-repeat: no-repeat;
-  background-size: 97% 98%;
-  background-position: center top;
+  color: #fff;
 }
 body .wrapper main h2 {
   margin-bottom: 15px;
+  color: #ff8c00;
 }
 body .wrapper img {
   max-width: 100%;
@@ -140,6 +132,9 @@ body .wrapper a {
   text-decoration: underline;
   font-style: italic;
   color: inherit;
+}
+body .wrapper hr {
+  border-color: #ff8c00;
 }
 body::-webkit-scrollbar-track {
   display: none;
@@ -157,6 +152,7 @@ body::-webkit-scrollbar-thumb {
 }
 main {
   padding: 50px 20px;
+  background-color: #000030;
   letter-spacing: 1px;
   font-family: western;
 }
@@ -166,13 +162,31 @@ main section {
 main section ul li {
   margin-bottom: 7px;
 }
-main section.portfolio .item {
-  margin-bottom: 40px;
+main section.crimes .work {
+  position: relative;
+  margin-bottom: 30px;
+  padding-bottom: 100%;
+  border: 3px solid #fff;
+  border-radius: 15px;
 }
-main section.portfolio .item img {
-  margin-bottom: 15px;
+main section.crimes .work a {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
-main section.portfolio .item p {
-  font-size: 12px;
+main section.crimes .work span {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: rotate(-45deg);
 }
 /* ===== // IMPORTS =====*/
