--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -7,22 +7,6 @@
 @screen-md-max: 1199px;
 @screen-lg-min: 1200px;
 /* ===== // WINDOW SIZES =====*/
-/* ===== SPACERS =====*/
-// .spacer {
-//   display: block;
-//   height: 100px;
-//   width: 100%;
-// }
-// .spacer25:extend(.spacer){
-//   height: 25px;
-// }
-// .spacer50:extend(.spacer){
-//   height: 50px;
-// }
-// .spacer100:extend(.spacer){
-//   height: 100px;
-// }
-/* ===== // SPACERS =====*/
 /* ===== FONT SIZES =====*/
 @media (max-width: @screen-md-min) {
   h1 {
@@ -69,7 +53,9 @@
 }
 /* ===== // FONT SIZES =====*/
 /* ===== IMPORTS =====*/
-@import "includes/header-footer.less";
+@import "includes/header.less";
+@import "includes/footer.less";
+@import "includes/aside.less";
 @import "includes/all.less";
 @import "includes/main.less";
 /* ===== // IMPORTS =====*/
