--- a/assets/css/includes/all.less
+++ b/assets/css/includes/all.less
@@ -39,16 +39,13 @@ body {
     }
   }
 
-  &::-webkit-scrollbar-track {
-    display: none;
-  }
-
   &::-webkit-scrollbar {
-    display: none;
+    width: 7px;
+    background: #fff;
   }
 
   &::-webkit-scrollbar-thumb {
-    display: none;
+    background: #ff8c00;
   }
   @media (max-width: @screen-xs-max) {
     .wrapper {
