--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,14 +136,12 @@ body .wrapper a {
 body .wrapper hr {
   border-color: #ff8c00;
 }
-body::-webkit-scrollbar-track {
-  display: none;
-}
 body::-webkit-scrollbar {
-  display: none;
+  width: 7px;
+  background: #fff;
 }
 body::-webkit-scrollbar-thumb {
-  display: none;
+  background: #ff8c00;
 }
 @media (max-width: 767px) {
   body .wrapper {
