--- a/assets/css/includes/main.less
+++ b/assets/css/includes/main.less
@@ -22,6 +22,7 @@ main {
         padding-bottom: 100%;
         border: 3px solid #fff;
         border-radius: 15px;
+        transition: 0.2s;
 
         a {
           position: absolute;
@@ -43,6 +44,15 @@ main {
           justify-content: center;
           align-items: center;
           transform: rotate(-45deg);
+          transition: 0.2s;
+        }
+
+        &:hover {
+          border-color: #ff8c00;
+
+          span {
+            color: #ff8c00;
+          }
         }
       }
     }
