--- a/css/includes/footer.less
+++ b/css/includes/footer.less
@@ -2,7 +2,7 @@
 
 footer {
   padding: 40px 0 10px;
-  background-color: @violet;
+  background-color: @black;
 
   ul {
     li {
@@ -11,6 +11,7 @@ footer {
       a {
         color: @white;
 
+        &:focus,
         &:hover {
           color: @white;
         }
