--- a/css/includes/header.less
+++ b/css/includes/header.less
@@ -26,8 +26,17 @@ header {
           font-size: 12px;
           font-weight: 600;
 
+          &:focus,
           &:hover {
             background: none;
+            color: @lightgray;
+          }
+
+          &:focus {
+            color: @white;
+          }
+
+          &:active {
             color: @lightgray;
           }
         }
