--- a/css/includes/index.less
+++ b/css/includes/index.less
@@ -5,11 +5,21 @@
 
   section {
     &.top {
+      background: linear-gradient(to top, rgba(255,255,255,1), rgba(0,0,0,0.2)), linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, #fff 50%, rgba(0, 0, 0, 0.5) 100%);
+
       .whoiam {
         display: flex;
         flex-direction: column;
         justify-content: center;
         min-height: 100vh;
+
+        h1 {
+          font-size: 46px;
+        }
+
+        h2 {
+          font-size: 40px;
+        }
       }
     }
 
@@ -40,6 +50,45 @@
         .des {
           p {
             text-indent: 15px;
+          }
+        }
+      }
+    }
+
+    &.portfolio {
+      .equal-h {
+        display: flex;
+        flex-wrap: wrap;
+
+        .card {
+          margin-bottom: 30px;
+          border: 2px solid #292929;
+
+          .top-part {
+            display: flex;
+            justify-content: space-between;
+            padding: 5px 15px 10px;
+
+            .des {
+              h4 {}
+
+              ul {
+                li {
+                  list-style: initial;
+                  list-style-position: inside;
+                }
+              }
+            }
+          }
+
+          .bottom-part {
+            padding: 7px 0;
+            background: @black;
+
+            a {
+              color: @white;
+              letter-spacing: 1px;
+            }
           }
         }
       }
