--- a/css/includes/index.less
+++ b/css/includes/index.less
@@ -1,8 +1,6 @@
 // "main": "../style.less"
 
 #index {
-  min-height: 200vh;
-
   section {
     &.top {
       background: linear-gradient(to top, rgba(255,255,255,1), rgba(0,0,0,0.2)), linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, #fff 50%, rgba(0, 0, 0, 0.5) 100%);
@@ -70,7 +68,11 @@
             padding: 5px 15px 10px;
 
             .des {
-              h4 {}
+              width: 100%;
+
+              h4 {
+                text-align: center;
+              }
 
               ul {
                 li {
