--- a/css/style.css
+++ b/css/style.css
@@ -1,232 +1,1 @@
-/* ===== WINDOW SIZES ===== */
-/* ===== // WINDOW SIZES =====*/
-/* ===== SPACERS =====*/
-.spacer,
-.spacer25,
-.spacer50,
-.spacer100 {
-  display: block;
-  height: 100px;
-  width: 100%;
-}
-.spacer25 {
-  height: 25px;
-}
-.spacer50 {
-  height: 50px;
-}
-.spacer100 {
-  height: 100px;
-}
-/* ===== // SPACERS =====*/
-/* ===== FONT SIZES =====*/
-@media (max-width: 992px) {
-}
-@media (max-width: 768px) {
-}
-@media (max-width: 767px) {
-}
-/* ===== // FONT SIZES =====*/
-/* ===== COLORS =====*/
-/* ===== // COLORS =====*/
-/* ===== IMPORTS =====*/
-header .navbar {
-  margin-bottom: 0;
-  border: 0;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-header .navbar > div {
-  display: flex;
-  justify-content: center;
-}
-header .navbar .navbar-nav {
-  margin: 0;
-}
-header .navbar .navbar-nav li {
-  display: inline-block;
-}
-header .navbar .navbar-nav li a {
-  padding: 15px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  color: #fff;
-  font-size: 12px;
-  font-weight: 600;
-}
-header .navbar .navbar-nav li a:focus,
-header .navbar .navbar-nav li a:hover {
-  background: none;
-  color: #ccc;
-}
-header .navbar .navbar-nav li a:focus {
-  color: #fff;
-}
-header .navbar .navbar-nav li a:active {
-  color: #ccc;
-}
-header .navbar .navbar-nav li:nth-child(2) a {
-  padding: 15px 20px;
-}
-footer {
-  padding: 40px 0 10px;
-  background-color: #292929;
-}
-footer ul li {
-  margin-bottom: 10px;
-}
-footer ul li a {
-  color: #fff;
-}
-footer ul li a:focus,
-footer ul li a:hover {
-  color: #fff;
-}
-footer .created {
-  color: #fff;
-}
-footer .created a {
-  color: #fff;
-  text-decoration: underline;
-}
-@media (max-width: 767px) {
-  footer ul {
-    text-align: left !important;
-  }
-  footer ul li {
-    margin-bottom: 15px;
-  }
-}
-#index section.top {
-  background: linear-gradient(to top, #ffffff, rgba(0, 0, 0, 0.2)), linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, #fff 50%, rgba(0, 0, 0, 0.5) 100%);
-}
-#index section.top .whoiam {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  min-height: 100vh;
-}
-#index section.top .whoiam h1 {
-  font-size: 46px;
-}
-#index section.top .whoiam h2 {
-  font-size: 40px;
-}
-#index section.about .skills .progress {
-  height: 30px;
-  margin-bottom: 30px;
-  box-shadow: none;
-  border: 1px solid #292929;
-  border-radius: 0;
-  background: #fff;
-}
-#index section.about .skills .progress .progress-bar {
-  padding: 5px 15px;
-  background: #292929;
-  text-align: left;
-  font-weight: 600;
-  letter-spacing: 1px;
-}
-@media (max-width: 767px) {
-  #index section.about .des p {
-    text-indent: 15px;
-  }
-}
-#index section.portfolio .equal-h {
-  display: flex;
-  flex-wrap: wrap;
-}
-#index section.portfolio .equal-h .card {
-  margin-bottom: 30px;
-  border: 2px solid #292929;
-}
-#index section.portfolio .equal-h .card .top-part {
-  display: flex;
-  justify-content: space-between;
-  padding: 5px 15px 10px;
-}
-#index section.portfolio .equal-h .card .top-part .des {
-  width: 100%;
-}
-#index section.portfolio .equal-h .card .top-part .des h4 {
-  text-align: center;
-}
-#index section.portfolio .equal-h .card .top-part .des ul li {
-  list-style: initial;
-  list-style-position: inside;
-}
-#index section.portfolio .equal-h .card .bottom-part {
-  padding: 7px 0;
-  background: #292929;
-}
-#index section.portfolio .equal-h .card .bottom-part a {
-  color: #fff;
-  letter-spacing: 1px;
-}
-@font-face {
-  src: url("/fonts/");
-  font-family: ;
-}
-body {
-  background: #fff;
-  color: #292929;
-  font-family: "Open Sans", sans-serif;
-}
-img {
-  max-width: 100%;
-  height: auto;
-}
-a:focus {
-  text-decoration: none;
-}
-a:active {
-  text-decoration: underline;
-  color: #ccc;
-}
-h1,
-h2,
-h3,
-h4 {
-  font-weight: 600;
-}
-h1.underline,
-h2.underline,
-h3.underline,
-h4.underline {
-  position: relative;
-}
-h1.underline::after,
-h2.underline::after,
-h3.underline::after,
-h4.underline::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: -10px;
-  display: block;
-  width: 60px;
-  height: 2px;
-  margin: 0 auto;
-  background-color: #292929;
-}
-h1.sketch,
-h2.sketch,
-h3.sketch,
-h4.sketch {
-  color: #000;
-  filter: drop-shadow(0 0 1px #fff) invert(1);
-}
-h1::selection,
-h2::selection,
-h3::selection,
-h4::selection,
-h5::selection,
-h6::selection,
-p::selection,
-span::selection,
-li::selection,
-a::selection {
-  background: #292929;
-  color: #fff;
-}
-/* ===== // IMPORTS =====*/
+.spacer,.spacer25,.spacer50,.spacer80{display:block;height:100px;width:100%}.spacer25{height:25px}.spacer50{height:50px}.spacer80{height:80px}@media (max-width:992px){}@media (max-width:768px){}@media (max-width:767px){}header .navbar{margin-bottom:0;border:0;background-color:rgba(0,0,0,0.7)}header .navbar>div{display:flex;justify-content:center}header .navbar .navbar-nav{margin:0}header .navbar .navbar-nav li{display:inline-block}header .navbar .navbar-nav li a{padding:15px;text-transform:uppercase;letter-spacing:1px;color:#fff;font-size:12px;font-weight:600}header .navbar .navbar-nav li a:focus,header .navbar .navbar-nav li a:hover{background:none;color:#ccc}header .navbar .navbar-nav li a:focus{color:#fff}header .navbar .navbar-nav li a:active{color:#ccc}header .navbar .navbar-nav li:nth-child(2) a{padding:15px 20px}footer{padding:40px 0 10px;background-color:#292929}footer ul li{margin-bottom:10px}footer ul li a{color:#fff}footer ul li a:focus,footer ul li a:hover{color:#fff}footer .created{color:#fff}footer .created a{color:#fff;text-decoration:underline}@media (max-width:767px){footer ul{text-align:left !important}footer ul li{margin-bottom:15px}}#index section.top{background:linear-gradient(to top, #fff, rgba(0,0,0,0.2)),linear-gradient(to right, rgba(0,0,0,0.5) 0, #fff 50%, rgba(0,0,0,0.5) 100%)}#index section.top .whoiam{display:flex;flex-direction:column;justify-content:center;min-height:100vh}#index section.top .whoiam h1{font-size:46px}#index section.top .whoiam h2{font-size:40px}#index section.about .skills .progress{height:30px;margin-bottom:30px;box-shadow:none;border:1px solid #292929;border-radius:0;background:#fff}#index section.about .skills .progress .progress-bar{padding:5px 15px;background:#292929;text-align:left;font-weight:600;letter-spacing:1px}@media (max-width:767px){#index section.about .des p{text-indent:15px}}#index section.portfolio .equal-h{display:flex;flex-wrap:wrap}#index section.portfolio .equal-h .card{margin-bottom:30px;border:2px solid #292929}#index section.portfolio .equal-h .card .top-part{display:flex;justify-content:space-between;padding:5px 15px 10px}#index section.portfolio .equal-h .card .top-part .des{width:100%}#index section.portfolio .equal-h .card .top-part .des h4{text-align:center}#index section.portfolio .equal-h .card .top-part .des ul li{list-style:initial;list-style-position:inside}#index section.portfolio .equal-h .card .bottom-part{padding:7px 0;background:#292929}#index section.portfolio .equal-h .card .bottom-part a{color:#fff;letter-spacing:1px}#index section.mail form input{height:30px;margin-bottom:30px;padding:0 0 0 8px;border:1px solid #292929;border-radius:0;background:#fff;color:#292929}#index section.mail form input:focus{box-shadow:0 0 1px #292929}#index section.mail form input::placeholder{color:#292929}#index section.mail form button{box-shadow:none;outline:none;border:1px solid #292929;border-radius:0;background:#fff;color:#292929;transition:.2s}#index section.mail form button:hover{background:#292929;color:#fff}#index section.mail form button:active{box-shadow:0 0 1px #292929}@font-face{src:url("/fonts/");font-family:}body{background:#fff;color:#292929;font-family:"Open Sans",sans-serif}img{max-width:100%;height:auto}a:focus{text-decoration:none}a:active{text-decoration:underline;color:#ccc}h1,h2,h3,h4{font-weight:600}h1.underline,h2.underline,h3.underline,h4.underline{position:relative}h1.underline::after,h2.underline::after,h3.underline::after,h4.underline::after{content:'';position:absolute;left:0;right:0;bottom:-10px;display:block;width:60px;height:2px;margin:0 auto;background-color:#292929}h1.sketch,h2.sketch,h3.sketch,h4.sketch{color:#000;filter:drop-shadow(0 0 1px #fff) invert(1)}h1::selection,h2::selection,h3::selection,h4::selection,h5::selection,h6::selection,p::selection,span::selection,li::selection,a::selection{background:#292929;color:#fff}
