--- a/css/style.less
+++ b/css/style.less
@@ -1,4 +1,4 @@
-// "out": "style.css", "compress": true, "strictMath": true, "sourceMap": true
+// "out": "style.css", "compress": true, "strictMath": true
 /* ===== WINDOW SIZES ===== */
 @screen-xs-max: 767px;
 @screen-sm-min: 768px;
@@ -19,8 +19,8 @@
 .spacer50:extend(.spacer){
   height: 50px;
 }
-.spacer100:extend(.spacer){
-  height: 100px;
+.spacer80:extend(.spacer){
+  height: 80px;
 }
 /* ===== // SPACERS =====*/
 /* ===== FONT SIZES =====*/
@@ -83,6 +83,5 @@
 @import "includes/header.less";
 @import "includes/footer.less";
 @import "includes/index.less";
-@import "includes/main.less";
 @import "includes/all.less";
 /* ===== // IMPORTS =====*/
