Was added style.min.css

--- a/css/style.less
+++ b/css/style.less
@@ -1,4 +1,4 @@
-// "out": "style.css", "compress": true, "strictMath": true
+// "out": "style.css", "strictMath": true
 /* ===== WINDOW SIZES ===== */
 @screen-xs-max: 767px;
 @screen-sm-min: 768px;
