--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,50 @@
 /* ===== WINDOW SIZES ===== */
-
 /* ===== // WINDOW SIZES =====*/
-
 /* ===== SPACERS =====*/
-
-.spacer, .spacer25, .spacer50, .spacer80 {
+.spacer,
+.spacer25,
+.spacer50,
+.spacer80 {
   display: block;
   height: 100px;
   width: 100%;
 }
-
 .spacer25 {
   height: 25px;
 }
-
 .spacer50 {
   height: 50px;
 }
-
 .spacer80 {
   height: 80px;
 }
-
 /* ===== // SPACERS =====*/
-
 /* ===== FONT SIZES =====*/
-
-@media (max-width: 992px) {}
-
-@media (max-width: 768px) {}
-
-@media (max-width: 767px) {}
-
+@media (max-width: 992px) {
+}
+@media (max-width: 768px) {
+}
+@media (max-width: 767px) {
+}
 /* ===== // FONT SIZES =====*/
-
 /* ===== COLORS =====*/
-
 /* ===== // COLORS =====*/
-
 /* ===== IMPORTS =====*/
-
 header .navbar {
   margin-bottom: 0;
   border: 0;
   background-color: rgba(0, 0, 0, 0.7);
 }
-
-header .navbar>div {
-  display: -webkit-box;
-  display: -ms-flexbox;
+header .navbar > div {
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
 }
-
 header .navbar .navbar-nav {
   margin: 0;
 }
-
 header .navbar .navbar-nav li {
   display: inline-block;
 }
-
 header .navbar .navbar-nav li a {
   padding: 15px;
   text-transform: uppercase;
@@ -71,50 +53,41 @@ header .navbar .navbar-nav li a {
   font-size: 12px;
   font-weight: 600;
 }
-
-header .navbar .navbar-nav li a:focus, header .navbar .navbar-nav li a:hover {
+header .navbar .navbar-nav li a:focus,
+header .navbar .navbar-nav li a:hover {
   background: none;
   color: #ccc;
 }
-
 header .navbar .navbar-nav li a:focus {
   color: #fff;
 }
-
 header .navbar .navbar-nav li a:active {
   color: #ccc;
 }
-
 header .navbar .navbar-nav li:nth-child(2) a {
   padding: 15px 20px;
 }
-
 footer {
   padding: 40px 0 10px;
   background-color: #292929;
 }
-
 footer ul li {
   margin-bottom: 10px;
 }
-
 footer ul li a {
   color: #fff;
 }
-
-footer ul li a:focus, footer ul li a:hover {
+footer ul li a:focus,
+footer ul li a:hover {
   color: #fff;
 }
-
 footer .created {
   color: #fff;
 }
-
 footer .created a {
   color: #fff;
   text-decoration: underline;
 }
-
 @media (max-width: 767px) {
   footer ul {
     text-align: left !important;
@@ -123,44 +96,29 @@ footer .created a {
     margin-bottom: 15px;
   }
 }
-
 #index section.top {
-  background: -webkit-gradient(linear, left bottom, left top, from(#ffffff), to(rgba(0, 0, 0, 0.2))), -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.5)), color-stop(50%, #fff), to(rgba(0, 0, 0, 0.5)));
   background: linear-gradient(to top, #ffffff, rgba(0, 0, 0, 0.2)), linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, #fff 50%, rgba(0, 0, 0, 0.5) 100%);
 }
-
 #index section.top .whoiam {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   min-height: 100vh;
 }
-
 #index section.top .whoiam h1 {
   font-size: 46px;
 }
-
 #index section.top .whoiam h2 {
   font-size: 40px;
 }
-
 #index section.about .skills .progress {
   height: 30px;
   margin-bottom: 30px;
-  -webkit-box-shadow: none;
   box-shadow: none;
   border: 1px solid #292929;
   border-radius: 0;
   background: #fff;
 }
-
 #index section.about .skills .progress .progress-bar {
   padding: 5px 15px;
   background: #292929;
@@ -168,59 +126,42 @@ footer .created a {
   font-weight: 600;
   letter-spacing: 1px;
 }
-
 @media (max-width: 767px) {
   #index section.about .des p {
     text-indent: 15px;
   }
 }
-
 #index section.portfolio .equal-h {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
-
 #index section.portfolio .equal-h .card {
   margin-bottom: 30px;
   border: 2px solid #292929;
 }
-
 #index section.portfolio .equal-h .card .top-part {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 5px 15px 10px;
 }
-
 #index section.portfolio .equal-h .card .top-part .des {
   width: 100%;
 }
-
 #index section.portfolio .equal-h .card .top-part .des h4 {
   text-align: center;
 }
-
 #index section.portfolio .equal-h .card .top-part .des ul li {
   list-style: initial;
   list-style-position: inside;
 }
-
 #index section.portfolio .equal-h .card .bottom-part {
   padding: 7px 0;
   background: #292929;
 }
-
 #index section.portfolio .equal-h .card .bottom-part a {
   color: #fff;
   letter-spacing: 1px;
 }
-
 #index section.mail form input {
   height: 30px;
   margin-bottom: 30px;
@@ -230,84 +171,74 @@ footer .created a {
   background: #fff;
   color: #292929;
 }
-
 #index section.mail form input:focus {
-  -webkit-box-shadow: 0 0 1px #292929;
   box-shadow: 0 0 1px #292929;
 }
-
-#index section.mail form input::-webkit-input-placeholder {
-  color: #292929;
-}
-
-#index section.mail form input:-ms-input-placeholder {
-  color: #292929;
-}
-
-#index section.mail form input::-ms-input-placeholder {
-  color: #292929;
-}
-
 #index section.mail form input::placeholder {
   color: #292929;
 }
-
 #index section.mail form button {
-  -webkit-box-shadow: none;
   box-shadow: none;
   outline: none;
   border: 1px solid #292929;
   border-radius: 0;
   background: #fff;
   color: #292929;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
-
 #index section.mail form button:hover {
   background: #292929;
   color: #fff;
 }
-
 #index section.mail form button:active {
-  -webkit-box-shadow: 0 0 1px #292929;
   box-shadow: 0 0 1px #292929;
 }
-
-@font-face {
-  src: url("/fonts/");
-  font-family: ;
-}
-
 body {
   background: #fff;
   color: #292929;
   font-family: "Open Sans", sans-serif;
 }
-
+body::-webkit-scrollbar {
+  width: 6px;
+}
+body::-webkit-scrollbar-button {
+  display: none;
+}
+body::-webkit-scrollbar-track,
+body::-webkit-scrollbar-track-piece {
+  border-left: 1px solid #292929;
+  background: #fff;
+}
+body::-webkit-scrollbar-thumb {
+  background: #292929;
+}
 img {
   max-width: 100%;
   height: auto;
 }
-
 a:focus {
   text-decoration: none;
 }
-
 a:active {
   text-decoration: underline;
   color: #ccc;
 }
-
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   font-weight: 600;
 }
-
-h1.underline, h2.underline, h3.underline, h4.underline {
+h1.underline,
+h2.underline,
+h3.underline,
+h4.underline {
   position: relative;
 }
-
-h1.underline::after, h2.underline::after, h3.underline::after, h4.underline::after {
+h1.underline::after,
+h2.underline::after,
+h3.underline::after,
+h4.underline::after {
   content: '';
   position: absolute;
   left: 0;
@@ -319,21 +250,24 @@ h1.underline::after, h2.underline::after, h3.underline::after, h4.underline::aft
   margin: 0 auto;
   background-color: #292929;
 }
-
-h1.sketch, h2.sketch, h3.sketch, h4.sketch {
+h1.sketch,
+h2.sketch,
+h3.sketch,
+h4.sketch {
   color: #000;
-  -webkit-filter: drop-shadow(0 0 1px #fff) invert(1);
   filter: drop-shadow(0 0 1px #fff) invert(1);
 }
-
-h1::-moz-selection, h2::-moz-selection, h3::-moz-selection, h4::-moz-selection, h5::-moz-selection, h6::-moz-selection, p::-moz-selection, span::-moz-selection, li::-moz-selection, a::-moz-selection {
+a::selection,
+h1::selection,
+h2::selection,
+h3::selection,
+h4::selection,
+h5::selection,
+h6::selection,
+li::selection,
+p::selection,
+span::selection {
   background: #292929;
   color: #fff;
 }
-
-h1::selection, h2::selection, h3::selection, h4::selection, h5::selection, h6::selection, p::selection, span::selection, li::selection, a::selection {
-  background: #292929;
-  color: #fff;
-}
-
 /* ===== // IMPORTS =====*/
